compiler/test-data/parser/layout/errors/unclosed.frel
module layout.errors.unclosed

// ERROR: Unclosed layout block
blueprint UnclosedLayout {
    """layout
    | cell |
}
